Fixed buttons and spacings

--- a/styles/content-style.css
+++ b/styles/content-style.css
@@ -34,9 +34,10 @@ background-color: #efefef;
   text-align: center;
   padding: 0;
   font-size: 30px;
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .container2 {
@@ -46,7 +47,6 @@ grid-template-areas:
     'nested nested nested nested nested nested';
 grid-gap: 1px;
 background-color: #fff;
-padding-bottom: 10px;
 } 
 
 .container2 > div {
@@ -60,14 +60,11 @@ padding-bottom: 10px;
 display: grid;
 grid-template-areas: 
 	'inspireras inspireras pt pt klasser klasser';
-/*grid-template-columns: repeat(3, 1fr);
-grid-auto-rows: minmax(70px, auto); */
-grid-gap: 1em;
 }
 
 .nested > div {
 border: #fff 1px solid;
-padding: 1em;
+padding: 5px 50px 20px;
 } 
 
 .container3 {
@@ -105,6 +102,7 @@ font-size: 12px;
 
 .text {
 font-size: 12px;
+margin: 1rem 0;
 }
 
 .text2 {
@@ -170,7 +168,15 @@ color: #002a4e;
 
 	.nested {
     grid-template-areas: 
-	'inspireras'
+	  'inspireras'
     'pt'
-    'klasser';}
+    'klasser';
+  }
+  
+  .item2,
+  .item3,
+  .item6 {
+    display: block;
+    height: 200px; 
+  }
 }
